--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,11 @@
     <h1></h1>
     <a href="/add">adicionar</a>
 </p>
+<form method="post">
+    <input type="text" name="pesquisar">
+    <input type="submit" value="Pesquisar">
+</form>
+
 <table>
     <tr>
         <th>id</th>
